# ysyx

./: .gitignore  Makefile
.hdl_checker/: cache.json
abstract-machine/: Makefile
digital-circuit/lab2/: Makefile
digital-circuit/lab3/: Makefile
digital-circuit/lab6/: shift.nxdc
digital-circuit/lab7/: Makefile  ps2_keyboard.nxdc
nanos-lite/include/: loader.h  ramdisk.h
nanos-lite/src/: device.c  fs.c  irq.c  loader.c  main.c  proc.c  ramdisk.c  syscall.c
navy-apps/: Makefile
nemu/: Kconfig  README.md
npc/: .gitignore  CMakeLists.txt  Makefile
npc/csrc/: dpi.cc  dpi.h  dpic.cc  init.cc  main.cc
npc/csrc/cpu/: cpu.cc  filelist.mk  reg.cc  reg.h
npc/csrc/device/: alarm.cc  alarm.h  device.cc  device.h  filelist.mk  intr.cc  serial.cc  timer.cc  timer.h
npc/csrc/device/io/: filelist.mk  map.cc  map.h  mmio.cc  mmio.h  serial.h  timer.h
npc/csrc/include/: autoconfig.h  cpu.h  dpic.h  filelist.mk  init.h  isa.h  macro.h
npc/csrc/memory/: filelist.mk  host.h  paddr.cc  paddr.h  vaddr.h
npc/csrc/monitor/: filelist.mk
npc/csrc/monitor/dbg/: debug.cc  debug.h
npc/csrc/monitor/difftest/: difftest.cc  difftest.h  difftest.mk  dut.cc  dut.h
npc/csrc/monitor/sdb/: sdb.cc  sdb.h
npc/csrc/monitor/trace/: itrace.c  mtrace.c  trace.h
npc/csrc/util/: disasm.cpp  filelist.mk
npc/vsrc/: top.sv  vsrc.txt
npc/vsrc/core/: a.out  agu.v  alu.v  axi.sv  axi.v  axi2rv.sv  axi_Arbiter.sv  axi_Xbar.sv  axi_if.sv  axi_xp.v  bjp.sv  bjp.v  bru.v  clint.v  core.sv  core.v  csr.v  defines.v  ex_ls.sv  exe.v  exu.v  genImm.v  icn.sv  id_ex.sv  id_ex.v  idu.sv  idu.v  if_id.sv  if_id.v  ifu.sv  ifu.v  igu.v  lsu.sv  lsu.v  pc.v  pcReg.v  pcu.v  pipe.sv  pipe.v  regs.v  (+4 more)
npc/vsrc/include/: assign.sv  assigns.sv  defines.sv  defines.v  macro.sv  typedefs.sv
npc/vsrc/perip/: axi_slave.sv  rom.v
pa0/: InstallingToolsForPAs.sh  hash.sh
(+136 files in other folders)
